--- a/index.html
+++ b/index.html
@@ -5,28 +5,30 @@
 <!-- metadata goes in head - Contains information that describes the web page document -->
 
 	<title>JavaJam Coffee House</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="stylesheet/javajam.css">
 
 </head>
 <body>
 <!-- content goes in the body -->
-	<div id="wrapper">	
-	
-	<header>
-		<h1>JavaJam Coffee House</h1>
-	</header>
-	
-	<nav>
-	<ul>
-		<li><a href="index.html">Home</a> </li>
-		<li><a href="menu.html">Menu</a> </li>
-		<li><a href="music.html">Music</a> </li>
-		<li><a href="jobs.html">Jobs</a> </li>
 
-	</ul>
-	</nav> 
+	<div id="wrapper" class="container">	
+	
+		<header>
+			<h1>JavaJam Coffee House</h1>
+		</header>
 
+		<nav class="nav nav-pills nav-fill">
+			<a class="nav-link active" aria-current="page" href="index.html" >Home</a>
+			<a class="nav-link" href="menu.html">Menu</a>
+			<a class="nav-link" href="music.html">Music</a>
+			<a class="nav-link" href="jobs.html">Jobs</a>
+		</nav>
+			
+		
+		
 	<main>
+			
 		<img id="imgroad" src="/images/windingroad.jpg" alt="winding road through the woods" width="400" height="300">
 		
 		<h2>Follow the Winding Road to JavaJam</h2>
