--- a/music.html
+++ b/music.html
@@ -5,6 +5,8 @@
 <!-- metadata goes in head - Contains information that describes the web page document -->
 
 	<title>JavaJam House Music</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="stylesheet/javajam.css">
 
 </head>
@@ -14,15 +16,14 @@
 <div id="wrapper">
 	<header><h1>JavaJam Coffee House</h1></header>
 	
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a> </li>
-			<li><a href="menu.html">Menu</a> </li>
-			<li><a href="music.html">Music</a> </li>
-			<li><a href="jobs.html">Jobs</a> </li>
+	<nav class="nav nav-pills nav-fill">
+		<a class="nav-link" aria-current="page"  href="index.html">Home</a>
+		<a class="nav-link" href="menu.html">Menu</a>
+		<a class="nav-link active " href="music.html">Music</a>
+		<a class="nav-link" href="jobs.html">Jobs</a>
 	
-		</ul>
 	</nav>
+
 
 	<main>
 		<h2>Music at JavaJam</h2>
@@ -34,11 +35,15 @@
 
         <h4>January</h4>
         <div class="details">
-		<a href="images/melanie.jpg"><img src="/images/melaniethumb.jpg"></a> Melanie Morris entertains with her melodic folk style.</div>
+		<a href="images/melanie.jpg"><img src="/images/melaniethumb.jpg"></a> Melanie Morris entertains with her melodic folk style.
+		<a class="btn btn-primary" href="https://open.spotify.com/track/4gMPlHHAjOQnUrhsuqHivn?si=bfb9e990fe9e4e81" role="button" >Open Music</a>
+	</div>
 
         <h4>February</h4>
         <div class="details">
-		<a href="images/greg.jpg"><img src="/images/gregthumb.jpg"></a> Tahoe Greg is back from his tour. New songs. New stories.</div>
+		<a href="images/greg.jpg"><img src="/images/gregthumb.jpg"></a> Tahoe Greg is back from his tour. New songs. New stories.
+		<a class="btn btn-primary" href="https://open.spotify.com/track/5HB7KB2HPCex1iOjiZnal7?si=cff8ca8bca5346a0" role="button" >Open Music</a>
+	</div>
 
 	</main>
 </div>
